# faserve

./: Cargo.toml  README.md
src/: main.rs  routes.rs
