[package]
name = "faserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
driftwood = "0.0.7"
tide-compress = "0.11.0"
rand = "0.8.5"
clap = { version = "4.3.1", features = ["derive"] }